completed html-images-lab

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Tags Challenge</title>
+</head>
+<body>
+
+<!-- Image Tags -->
+<!-- 1. Image with just a source attribute -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+
+<!-- 2. Image with alt attribute in addition to source -->
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A majestic lion" />
+
+<!-- 3. Image with alt, source, and title attributes -->
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="A majestic lion"
+  title="King of the Jungle"
+/>
+
+</body>
 </html>
